// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountCreateContainer should render correctly 1`] = `
<DocumentFragment>
  <button>
    Button
  </button>
</DocumentFragment>
`;

exports[`AccountCreateContainer should render redirect when onCreateAccount is called 1`] = `
<DocumentFragment>
  Redirect
  <button>
    Button
  </button>
</DocumentFragment>
`;
